refactor Dockerfile y docker compose, para poder ejecutar la imagen en azure app service container

--- a/ExecuteWithPublicImage/docker-compose.yml
+++ b/ExecuteWithPublicImage/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3.7'
 services:
-  web:
+  ubuntu:
     build: .
-    restart: always
-    container_name: spring-boot-microservice
+    image: ccorzo/spring-boot:ubuntu
+    container_name: spring-project-docker
     ports:
         - "8080:8080"
     
