--- a/ExecuteWithPublicImage/Dockerfile
+++ b/ExecuteWithPublicImage/Dockerfile
@@ -1,2 +1,2 @@
-FROM ccorzo/spring-boot:latest
-CMD ["java", "-jar", "/usr/src/spring-project/ArabigosARomanos-0.0.1-SNAPSHOT.jar"]
+FROM ccorzo/spring-boot:ubuntu
+CMD ["java", "-jar", "/home/ubuntu/spring-project/ArabigosARomanos-0.0.1-SNAPSHOT.jar"]
